# katabankocr

./: .gitignore  KataBankOCR.hs  README.md  exec-main.sh  kataBankOCRMain.hs  kataBankOCR_test.hs  katabankocr.cabal  output.txt  package.yaml  stack.yaml
app/: kataBankOCRMain.hs
src/: KataBankOCR.hs
tests/: kataBankOCR_test.hs
