name:                katabankocr
version:             0.0.1
synopsis:            katabankocr
license:             MIT
author:              Jon Schoning
maintainer:          jonschoning@gmail.com
copyright:           Copyright (c) 2015 Jon Schoning
homepage:            https://github.com/jonschoning/katabankocr
bug-reports:         https://github.com/jonschoning/katabankocr/issues
category:            kata
build-type:          Simple
cabal-version:       >=1.10
Description:         
    .
    code kata

library 
  hs-source-dirs:      src
  build-depends:       base >=4.6 && < 5.0,
                       containers,
                       text,
                       split
  default-language:    Haskell2010
  other-modules:     
  exposed-modules:     KataBankOCR 
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
executable katabankocr-exe
  hs-source-dirs:      app
  main-is:             kataBankOCRMain.hs
  build-depends:       base >=4.6 && < 5.0,
                       katabankocr,
                       split,
                       containers
test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: kataBankOCR_test.hs
  hs-source-dirs: tests
  build-depends:       base >=4.6 && < 5.0,
                       katabankocr,
                       containers,
                       text,
                       HUnit
  ghc-options:         -Wall 
                       -fno-warn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/jonschoning/katabankocr.git
